# secure-doc-pipeline

./: .clineignore  .dockerignore  .env  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  eval_test.ipynb  evaluate_output.py  evaluation_metrics.py  evaluator.py  main.py  ollama-eval.py  ollama_eval.py  pipeline_core.py  pyproject.toml  requirements.txt  test.py  test_ollama.py
.deepeval/: .deepeval  .deepeval_telemetry.txt
api/routes/: process_session.py  transformers.py
clients/: base.py  deepseek.py  gemini.py  ollama.py  openai.py
docs/: env-configuration.md
domain/: auth.py  container.py  database.py  dependencies.py  error.py  evaluation_prompt.py  extraction_prompt.py  models.py  repository.py  retry.py  settings.py  structured_logger.py
evaluation/: custom_ollama_eval_model.py  evaluation_engine.py  evaluator.py  ollama_evaluator.py
extraction/: extraction_engine.py  extractor.py
notebooks/: eval_test.ipynb  evaluation.ipynb  extraction.ipynb
notebooks/.ipynb_checkpoints/: evaluation-checkpoint.ipynb
schemas/: clinical_summary.py  evaluation_metrics.py  session_request.py  session_response.py
secure-doc-pipeline/: main.py  pyproject.toml
services/: pipeline.py
tests/: conftest.py  test_main.py
tests/test_api/: test_exception_handlers.py  test_transformers_route.py
tests/test_domain/: test_auth.py  test_container.py  test_error.py  test_retry.py  test_settings.py  test_structured_logger.py
tests/test_evaluation/: test_evaluation_engine.py  test_evaluator.py
tests/test_extraction/: test_extraction_engine.py  test_extractor.py  test_extractor_retries.py
tests/test_prompts/: test_evaluation_prompt.py  test_extraction_prompt.py
tests/test_schemas/: test_clinical_summary.py  test_evaluation_metrics.py  test_session_request.py  test_session_response.py
