[project]
name = "secure-doc-pipeline"
version = "0.1.0"
description = "Secure document summary and factual evaluation pipeline"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "deepeval>=4.0.7",
    "fastapi>=0.138.1",
    "google-genai>=2.10.0",
    "ipywidgets>=8.1.8",
    "ollama>=0.6.2",
    "openai>=2.44.0",
    "portalocker>=3.2.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn>=0.49.0",
    "asyncpg>=0.30"
]

[tool.uv]
# Enforce a synchronized lockfile strategy
package = false

[dependency-groups]
dev = [
    "poethepoet>=0.47.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
]

[tool.poe.tasks]
# Define custom execution shortcuts
run-eval = "python main.py"
server = "uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
extract-demo = "uv run --with google.genai python -m schemas.clinical_summary"
